--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -147,7 +147,7 @@
 	                            </div>
 	                        </div>
 	                        <p class="intro"><span></span></p>
-							<p>See the types of projects we have build and how members have done in our <a href="/challenges/recent">recently completed challenges</a>. Check out the winners, prize money, blog posts and even download any open source code that's been made available.</p>
+							<p>See the types of projects the CloudSpokes community has build and how members have done in our <a href="/challenges/recent">recently completed challenges</a>. Check out the winners, prize money, blog posts and even download any open source code that's available.</p>
 	                    </div>
 	                </div>
 	            </div>
