--- a/app/views/challenges/recent.html.erb
+++ b/app/views/challenges/recent.html.erb
@@ -13,7 +13,7 @@
                         <div class="box-t">
                             <div class="col-left fl">
                                 <h4><%= link_to "#{record["Name"]}", challenge_url(record["ID__c"]) %></h4>
-                                <p><%= record["Description__c"].gsub(/<\/?[^>]*>/, "")[0..500] %>...</p>
+                                <p><%= truncate(record["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 500, :separator => ' ') %></p>
                             </div>
                             <div class="col-right fr">
                                 <p>
